app/assets/stylesheets/modules/panel.css.scss
.panel {
  min-height: 20px;
  padding: 24px;
  margin-bottom: 20px;
  background-color: white;
  border-radius: $border-radius-base;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);

  blockquote {
    color: $gray-dark;
    border-color: #ddd;
    border-color: rgba(0, 0, 0, 0.15);
  }

  [data-plan-slug]:not(.plan-subscribed) .geomicon-check {
    display: none;
  }

  .plan-subscribed {
    color: $brand-success;
    height: 36px;
    padding-top: 7px;

    &:hover {
      text-decoration: none;
      cursor: default;
    }

    .geomicon-check {
      font-size: 20px;
      display: inline-block;
      padding-right: 2px;
      top: 2px;
    }

    .plan-select-message {
      font-weight: 400;
    }
  }
}

.panel-default {
  border: 1px solid $panel-border;
}

.panel-error {
  border: 1px solid lighten($brand-danger, 20%);

  .geomicon-alert {
    font-size: $font-size-xl;
    color: $brand-danger;
    top: 7px;
    padding-right: $padding-xs-horizontal;
  }

  .panel-title {
    display: inline-block;
    color: $brand-danger;
  }

  ul {
    list-style: none;
    color: $gray-darker;
    line-height: 1.5;
    padding-left: 0;
    margin-bottom: 3px;
  }
}

form fieldset .panel-error {
  margin: 2em 0 1em 0;
}

.panel-title {
  color: $panel-title;
  text-transform: uppercase;
}

.panel-body {
  color: darken($blue, 20%);
  font-size: 16px;
  font-weight: 300;
  margin-left: 0;
  padding-left: 0;
  padding-top: 10px;
  padding-bottom: 0;
  padding-right: 0;

  .btn {
    margin-top: 24px;
  }

  p {
    margin-bottom: 10px;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.panel-lg {
  padding: 30px;
  border-radius: $border-radius-large;
}

